2006-11-07  Yen-Ju Chen <yjchex gmail>

    * Source/UKPluginsRegistry.m:
    * Source/PKPrefPanesRegistry.m:
    Unified the singleton handling to allow multiple registries
    in an application.
    * Rename as PaneKit.
    * Remove Backbone compability.

2006-11-06  Quentin Mathe <qmathe@club-internet.fr>

    * Fix compilation on GNUstep.

2006-11-05  Quentin Mathe <qmathe@club-internet.fr>

    * Fix flick of matrix view.
    * Work on GNUstep.
    * New PKPlainPresentation for single preference pane.
    * Support adding preference pane programmingly.

2006-11-04  Quentin Mathe <qmathe@club-internet.fr>

    * Write table view in code.
    * Remove all compilation warnings (GNUstep and Cocoa with GNUstep-make).
    * Fix memory leak on matrix presentation.
    * Cache preferences controller and loaded plugins in presentation.
    * Remove unused -presentationView (it is problematic).
    * Fix flick of table view and shift of toolbar view.

2006-09-26  Quentin Mathe <qmathe@club-internet.fr>

    * GNUmakefile: Modified to include 'etoile.make'.

2006-02-14  Quentin Mathe <qmathe@club-internet.fr>

    * Headers/PKPreferencesController.h: Made class summary in notice more 
    accurate.
    * Source/PKPreferencesController.m: Fixed documentation markup and removed 
    some constants not needed (enclosed in a conditional directive).
    * Headers/PKPresentationBuilder.h: Replaced class summary to describe this 
    class and not PKPreferencesController. Fixed mismatched paramater name in 
    method -layoutPreferencesViewWithPaneView: between interface and 
    implementation.
    * Source/PKPresentationBuilder.m: Fixed documentation markup and replaced 
    class summary to describe this class and not PKPreferencesController.
    * Source/UKPluginsRegistry.m:
    * Source/PKPreferencePane.m:
    * Source/PKPrefPanesRegistry.m: 
    Fixed documentation markup.

2006-02-14  Quentin Mathe <qmathe@club-internet.fr>

    * Headers/PKMatrixViewPresentation.h: